[gd_scene load_steps=10 format=3]

[ext_resource path="res://src/actors/player/Player.gd" type="Script" id="1"]

[sub_resource type="CapsuleShape2D" id="1"]
radius = 12.0
height = 46.0

[sub_resource type="Gradient" id="2"]
colors = PackedColorArray(0.133333, 0.690196, 0.796078, 1, 0.0705882, 0.34902, 0.505882, 1)

[sub_resource type="GradientTexture2D" id="3"]
width = 32
height = 48
gradient = SubResource("2")

[sub_resource type="SpriteFrames" id="4"]
animations = [{"frames":[SubResource("3")],"loop":true,"name":"idle","speed":6.0},{"frames":[SubResource("3")],"loop":true,"name":"run","speed":10.0},{"frames":[SubResource("3")],"loop":false,"name":"jump","speed":8.0},{"frames":[SubResource("3")],"loop":false,"name":"fall","speed":8.0},{"frames":[SubResource("3")],"loop":false,"name":"dash","speed":12.0},{"frames":[SubResource("3")],"loop":false,"name":"attack","speed":14.0},{"frames":[SubResource("3")],"loop":false,"name":"double_jump","speed":12.0}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")
offset = Vector2(0, -2)

[node name="Visuals" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Visuals"]
sprite_frames = SubResource("4")
centered = false
position = Vector2(-16, -44)

[node name="CoyoteTimer" type="Timer" parent="."]
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="Hurtbox" type="Area2D" parent="."]
monitoring = true
monitorable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("1")
offset = Vector2(0, -2)

[node name="AttackArea" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("1")
position = Vector2(18, -6)
scale = Vector2(0.8, 0.6)
